requirement Expediente Proveedor is almost complete, historial pagos is missing

--- a/src/main/java/com/proyecto/vista/VentanaDetalleExpedienteProveedor.form
+++ b/src/main/java/com/proyecto/vista/VentanaDetalleExpedienteProveedor.form
@@ -80,7 +80,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" attributes="0">
-                                  <Component id="volvetBtn" min="-2" max="-2" attributes="0"/>
+                                  <Component id="volvertBtn" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="productosProveeBtn" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
@@ -122,7 +122,7 @@
                       <Component id="hitorialPagosBtn" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="productosProveeBtn" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="facturasPendientesBtn" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
-                      <Component id="volvetBtn" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="volvertBtn" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               </Group>
@@ -270,7 +270,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="facturasPendientesBtnActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JButton" name="volvetBtn">
+        <Component class="javax.swing.JButton" name="volvertBtn">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="0" red="ff" type="rgb"/>
@@ -288,7 +288,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="volvetBtnActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="volvertBtnActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
